--- a/lib/stm32/l1/Makefile
+++ b/lib/stm32/l1/Makefile
@@ -29,6 +29,7 @@ CFLAGS		= -Os -g -Wall -Wextra -I../../../include -fno-common \
 # ARFLAGS	= rcsv
 ARFLAGS		= rcs
 OBJS		= rcc.o desig.o crc.o usart.o exti2.o flash.o timer.o
+OBJS +=	adc_common_all.o
 OBJS +=     gpio_common_all.o gpio_common_f24.o spi_common_all.o crc_common_all.o
 OBJS +=     dac_common_all.o usart_common_all.o iwdg_common_all.o i2c_common_all.o
 OBJS +=     pwr_common_all.o pwr.o
