[l1+examples] working adc+dac, but rough api
This uses the "unified" adc code for both l1 and f1

--- a/examples/stm32/l1/stm32l-discovery/adc-dac-printf/Makefile
+++ b/examples/stm32/l1/stm32l-discovery/adc-dac-printf/Makefile
@@ -17,25 +17,8 @@
 ## along with this library.  If not, see <http://www.gnu.org/licenses/>.
 ##
 
-LIBNAME		= libopencm3_stm32l1
-
-PREFIX		?= arm-none-eabi
-#PREFIX		?= arm-elf
-CC		= $(PREFIX)-gcc
-AR		= $(PREFIX)-ar
-CFLAGS		= -Os -ggdb3 -Wall -Wextra -I../../../include -fno-common \
-		  -mcpu=cortex-m3 -mthumb -Wstrict-prototypes \
-		  -ffunction-sections -fdata-sections -MD -DSTM32L1
-# ARFLAGS	= rcsv
-ARFLAGS		= rcs
-OBJS		= rcc.o desig.o crc.o usart.o exti2.o flash.o timer.o
-OBJS +=	adc_common_all.o adc_specific_l1.o
-OBJS +=     gpio_common_all.o gpio_common_f24.o spi_common_all.o crc_common_all.o
-OBJS +=     dac_common_all.o usart_common_all.o iwdg_common_all.o i2c_common_all.o
-OBJS +=     pwr_common_all.o pwr.o
-OBJS +=     rtc_common_bcd.o
-
-VPATH += ../../usb:../:../../cm3:../common
+BINARY = adc-dac-printf
+LDSCRIPT = ../../../../../lib/stm32/l1/stm32l15xxb.ld
 
 include ../../Makefile.include
 
