--- a/lib/stm32/f1/Makefile
+++ b/lib/stm32/f1/Makefile
@@ -32,10 +32,10 @@ OBJS		= rcc.o gpio.o flash.o rtc.o dma.o exti.o ethernet.o \
 		  usb_f103.o usb.o usb_control.o usb_standard.o can.o \
 		  timer.o usb_f107.o desig.o pwr_common_all.o \
 		  usb_fx07_common.o \
-		  adc_common_all.o \
 		  gpio_common_all.o dma_common_f13.o spi_common_all.o \
 		  dac_common_all.o usart_common_all.o iwdg_common_all.o \
 		  i2c_common_all.o crc_common_all.o
+OBJS += adc_common_all.o adc_specific_f1.o
 
 VPATH += ../../usb:../:../../cm3:../common
 
