imx6: Initial stubs for nvic/gic vector tables
Will need further work, I only entered a few of the irqs into the json
file, and the root vector.c might need changes to do the cortex-a gic
core interrupts first, but it might work as is, as I included the
offsets as the irq2nvic allows.  (Just ignore the nvic wording)

Based on work by Jonas Meyer (quitte)

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ include/libopencmsis/lpc43xx/
 include/libopencmsis/sam/
 include/libopencmsis/stm32/
 include/libopencmsis/vf6xx/
+include/libopencmsis/imx6/
 
 # netbeans, intellij, eclipse project files
 nbproject/
