fix syntax in jenkinsfile

--- a/tests/gadget-zero/Jenkinsfile
+++ b/tests/gadget-zero/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     }
 
     stages {
-	# TODO - set build status to pneding....
+	// TODO - set build status to pneding....
         stage('checkout') {
             steps {
 		step([$class: 'GitHubSetCommitStatusBuilder'])
